--- a/document/诗词应用.md
+++ b/document/诗词应用.md
@@ -2,25 +2,29 @@
 
 ## 接口定义
 
-####  获取今天诗词
+#### 数据结构
 
-> - 路径：getTodayPoem
-> - 参数：无
-> - 返回值：JSON数据
+> - Network Data Holder
+>   - Poem
+>   - Error Info
+> - Current Date
 
-#### 获取上一天诗词
+#### 接口
 
-> - 路径：getLastPoem
-> - 参数：curDate - 秒
-> - 返回值：JSON数据
-
-#### 获取随机诗词
-
-> 路径：getPoemRandom
->
-> 参数：无
->
-> 返回：JSON数据随机
+> - 今日诗词
+>   - GET
+>   - 参数：无
+>   - 返回：Network Data Holder - JSON
+> - 某日诗词
+>   - GET
+>   - 参数：day - 距2019/1/1天数
+>   - 返回：Network Data Holder - JSON
+>   - 注：成功后客户端更改 Current Date 值
+> - 随机诗词
+>   - GET
+>   - 参数：无
+>   - 返回：Network Data Holder - JSON
+>   - 注：成功后客户端重置 Current Date 值
 
 ## 客户端功能
 
