use sqflite complete favorite poem query, update and show

--- a/document/诗词应用.md
+++ b/document/诗词应用.md
@@ -28,10 +28,21 @@
 
 ## 客户端功能
 
-#### 收藏
+#### 收藏与缓存
 
 > 存储于本地数据库中
 
-#### 缓存
+## 数据库设计
 
-> 数据存入数据库中
+#### 诗词
+
+| 字段名        | 数据类型          | 属性 | 描述                         |
+| :------------ | ----------------- | ---- | ---------------------------- |
+| diffDay       | int               | 主键 | id为某日距2019/1/1的天数     |
+| title         | varchar           |      | 标题                         |
+| author        | varchar           |      | 作者                         |
+| authorDynasty | varchar           |      | 年代                         |
+| lines         | varchar(JSON str) |      | 诗词正文，有许多行组成的列表 |
+
+
+
