add global font-size and color

--- a/document/诗词应用.md
+++ b/document/诗词应用.md
@@ -26,12 +26,6 @@
 >   - 返回：Network Data Holder - JSON
 >   - 注：成功后客户端重置 Current Date 值
 
-## 客户端功能
-
-#### 收藏与缓存
-
-> 存储于本地数据库中
-
 ## 数据库设计
 
 #### 诗词
@@ -43,6 +37,39 @@
 | author        | varchar           |      | 作者                         |
 | authorDynasty | varchar           |      | 年代                         |
 | lines         | varchar(JSON str) |      | 诗词正文，有许多行组成的列表 |
+
+
+## 详细功能定义
+
+#### 获取今日诗词
+
+> 从服务器获取今日的诗词
+
+#### 查看前/后一天诗词
+
+> 能够查看以前的文章，实现方式为上/下页方式
+
+#### 随机查看一篇诗词
+
+> 随机选择一篇诗词并显示
+
+#### 收藏诗词
+
+> 能够收藏诗词，并且能够查看已收藏的诗词
+>
+> 收藏的诗词存储于本地数据库中
+
+#### 更改诗词界面背景色
+
+> 提供三种以上是此界面的背景色供用户选择，在设置中提供
+
+#### 夜间模式
+
+> 提供夜间模式供用户使用
+
+#### 更改字体大小
+
+> 提供三种（小中大）字体供用户选择
 
 
 
