fix problem that setting doesn't update after restart app, modify url to public avaliable server

--- a/document/诗词应用.md
+++ b/document/诗词应用.md
@@ -12,16 +12,16 @@
 #### 接口
 
 > - 今日诗词
->   - GET
+>   - GET **today**
 >   - 参数：无
 >   - 返回：Network Data Holder - JSON
 > - 某日诗词
->   - GET
+>   - GET **poemofday?diffDay=%d**
 >   - 参数：day - 距2019/1/1天数
 >   - 返回：Network Data Holder - JSON
 >   - 注：成功后客户端更改 Current Date 值
 > - 随机诗词
->   - GET
+>   - GET **randompoem**
 >   - 参数：无
 >   - 返回：Network Data Holder - JSON
 >   - 注：成功后客户端重置 Current Date 值
